--- a/app/src/main/res/layout/ouput.xml
+++ b/app/src/main/res/layout/ouput.xml
@@ -6,14 +6,14 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Monthly Payment"
+        android:text="Monthly Payment: "
         android:id="@+id/monthlyPaymentLabel"
         android:layout_gravity="left"
         android:enabled="true"
         android:textAlignment="center"
-        android:layout_marginTop="0dp"
-        android:layout_alignParentStart="true"
-        android:paddingTop="10dp" />
+        android:paddingTop="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,16 +22,17 @@
         android:text="Monthly Payment Value"
         android:id="@+id/monthlyPayment"
         android:enabled="true"
-        android:textAlignment="center"
+        android:textAlignment="viewStart"
         android:paddingTop="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_above="@+id/totalInterestPaidLabel"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/totalPropertyTaxPaidLabel" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Total Interest"
+        android:text="Total Interest: "
         android:id="@+id/totalInterestPaidLabel"
         android:layout_gravity="left"
         android:enabled="true"
@@ -57,7 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Total Property Tax"
+        android:text="Total Property Tax: "
         android:id="@+id/totalPropertyTaxPaidLabel"
         android:layout_gravity="left"
         android:enabled="true"
@@ -83,14 +84,15 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Payoff Date:"
+        android:text="Payoff Date: "
         android:id="@+id/payOffDateLabel"
         android:layout_gravity="left"
         android:enabled="true"
         android:textAlignment="center"
         android:layout_below="@id/totalPropertyTaxPaidLabel"
         android:layout_alignParentStart="true"
-        android:paddingTop="10dp" />
+        android:paddingTop="10dp"
+        android:layout_alignEnd="@+id/monthlyPaymentLabel" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -103,6 +105,7 @@
         android:paddingTop="10dp"
         android:layout_below="@+id/totalPropertyTaxPaid"
         android:layout_alignStart="@+id/totalPropertyTaxPaid"
-        android:layout_alignEnd="@+id/totalPropertyTaxPaid" />
+        android:layout_alignEnd="@+id/totalPropertyTaxPaid"
+        android:layout_alignBottom="@+id/payOffDateLabel" />
 
 </RelativeLayout>
